--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Yurii Kitsera CV</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -44,9 +44,18 @@
                     <a href="https://github.com/YraKot">https://github.com/YraKot</a>
                 </div>
             </div>
+
+            <a href="#" id="js-to-bottom"></a>
         </div>
 
         <div class="content">
+            <div class="content-row">
+                <h3 class="content-title">Professional Summary</h3>
+                <div class="content-desc">
+                    <p>1.5+ year experience as a Front-End dev. I am interested in Angular.js</p>
+                    <p>Looking for a job that will help me to improve my skills. Result-oriented, diligent, consistent, friendly, sociable, and responive persone, team player.</p>
+                </div>
+            </div>
             <div class="content-row">
                 <h3 class="content-title">Work Experience</h3>
                 <div class="content-desc">
@@ -134,8 +143,14 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="btn-wrapper">
+                <a class="btn" href="javascript:void(0)" onClick="return rudr_favorite(this);">Add to favorites</a>
+                <a class="btn" href="Kitsera_Yurii_CV.pdf" download="Yurii-Kitsera-CV">Download CV</a>
+            </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
