--- a/cv.html
+++ b/cv.html
@@ -52,8 +52,9 @@
             <div class="content-row">
                 <h3 class="content-title">Professional Summary</h3>
                 <div class="content-desc">
-                    <p>1.5+ year experience as a Front-End dev. I am interested in Angular.js</p>
-                    <p>Looking for a job that will help me to improve my skills. Result-oriented, diligent, consistent, friendly, sociable, and responive persone, team player.</p>
+                    <p>1.5+ year experience as a Front-End dev. I am interested in Angular 2+ and I'm using it in my pet project. </p>
+                    <p>Looking for a job that will help me improve my skills. Responsible, diligent, reliable, able to listen, friendly, able to learn quickly and team player.
+                    </p>
                 </div>
             </div>
             <div class="content-row">
@@ -61,16 +62,16 @@
                 <div class="content-desc">
                     <div class="content-head work">
                         <p class="content-date">04.2019 - now</p>
-                        <p>Chunkup, Web Development Lab</p>
+                        <p>Chunkup, Web Development Lab, front-end dev.</p>
                     </div>
                     <ul class="content-list">
-                        <li><a href="https://qa.prorfx.com ">https://qa.prorfx.com </a></li>
+                        <li><a href="https://qa.prorfx.com ">https://qa.prorfx.com</a></li>
                     </ul>
                 </div>
                 <div class="content-desc">
                     <div class="content-head work">
                         <p class="content-date">01.2018 - 04.2019</p>
-                        <p>UPQODE LLC, front-end dev position.</p>
+                        <p>UPQODE LLC, front-end dev.</p>
                     </div>
                     <ul class="content-list">
                         <li><a href="https://www.accenture.com/us-en">www.accenture.com</a></li>
@@ -95,7 +96,7 @@
                 </div>
                 <div class="content-desc">
                     <div class="content-head work">
-                        <p class="content-date">09.2013 – 2017</p>
+                        <p class="content-date">09.2013 – 12.2017</p>
                         <p>Lviv Polytechnic National University,
                             Institute of Computer Sciences and Information Technologies, Department of Applied
                             Linguistics,
@@ -130,7 +131,8 @@
                 <h3 class="content-title">Languages</h3>
                 <div class="content-desc lang">
                     <p>Ukrainian – native</p>
-                    <p>English – intermediate</p>
+                    <p>English   – intermediate</p>
+                    <p>Russian   - intermediate</p>
                 </div>
             </div>
             <div class="content-row">
@@ -138,8 +140,10 @@
                 <div class="content-desc tech">
                     <ul>
                         <li>HTML5, PUG, Nunjucks</li>
-                        <li>CSS3, SCSS, LESS</li>
-                        <li>JS, ES6</li>
+                        <li>CSS3, SCSS, SASS, LESS</li>
+                        <li>JS, ES6, TS, jQuery</li>
+                        <li>Gulp, Webpack, Git</li>
+                        <li>Phtoshop, Zeplin, Sketch</li>
                     </ul>
                 </div>
             </div>
