--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Yurii Kitsera CV</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,32 +20,33 @@
             <div class="intro-img">
                 <img src="cv-img.jpg" alt="img cv">
             </div>
-
-            <h1 class="intro-headline">Yurii Kitsera</h1>
-
-            <div class="intro-content">
-                <h4 class="intro-title">Contacts</h4>
-
-                <div class="intro-row">
-                    <h6>Address</h6>
-                    <p>Ukraine, Lviv</p>
-                </div>
-                <div class="intro-row">
-                    <h6>Phone</h6>
-                    <a href="tel:+380678656486">+380678656486</a>
-                </div>
-                <div class="intro-row">
-                    <h6>Email</h6>
-                    <a href="mailto:y.kitsera@gmail.com">y.kitsera@gmail.com</a>
-                </div>
-                <div class="intro-row">
-                    <h6>Linkedin</h6>
-                    <a
-                        href="https://www.linkedin.com/in/yuriy-kitsera-2a896b115/">https://www.linkedin.com/in/yuriy-kitsera-2a896b115/</a>
-                </div>
-                <div class="intro-row">
-                    <h6>github</h6>
-                    <a href="https://github.com/YraKot">https://github.com/YraKot</a>
+            <div class="wi100">
+                <h1 class="intro-headline">Yurii Kitsera</h1>
+    
+                <div class="intro-content">
+                    <h4 class="intro-title">Contacts</h4>
+    
+                    <div class="intro-row">
+                        <h6>Address</h6>
+                        <p>Ukraine, Lviv</p>
+                    </div>
+                    <div class="intro-row">
+                        <h6>Phone</h6>
+                        <a href="tel:+380678656486">+380678656486</a>
+                    </div>
+                    <div class="intro-row">
+                        <h6>Email</h6>
+                        <a href="mailto:y.kitsera@gmail.com">y.kitsera@gmail.com</a>
+                    </div>
+                    <div class="intro-row">
+                        <h6>Linkedin</h6>
+                        <a href="https://www.linkedin.com/in/yuriy-kitsera-2a896b115/"
+                            target="_blank">yuriy-kitsera-2a896b115</a>
+                    </div>
+                    <div class="intro-row">
+                        <h6>github</h6>
+                        <a href="https://github.com/YraKot" target="_blank">github.com/YraKot</a>
+                    </div>
                 </div>
             </div>
 
@@ -52,8 +57,10 @@
             <div class="content-row">
                 <h3 class="content-title">Professional Summary</h3>
                 <div class="content-desc">
-                    <p>1.5+ year experience as a Front-End dev. I am interested in Angular 2+ and I'm using it in my pet project. </p>
-                    <p>Looking for a job that will help me improve my skills. Responsible, diligent, reliable, able to listen, friendly, able to learn quickly and team player.
+                    <p>1.5+ year experience as a Front-End dev. I am interested in Angular 2+ and I'm using it in my pet
+                        project. </p>
+                    <p>Looking for a job that will help me improve my skills. Responsible, diligent, reliable, able to
+                        listen, friendly, able to learn quickly and team player.
                     </p>
                 </div>
             </div>
@@ -65,7 +72,7 @@
                         <p>Chunkup, Web Development Lab, front-end dev.</p>
                     </div>
                     <ul class="content-list">
-                        <li><a href="https://qa.prorfx.com ">https://qa.prorfx.com</a></li>
+                        <li><a href="https://qa.prorfx.com" target="_blank">https://qa.prorfx.com</a></li>
                     </ul>
                 </div>
                 <div class="content-desc">
@@ -74,14 +81,15 @@
                         <p>UPQODE LLC, front-end dev.</p>
                     </div>
                     <ul class="content-list">
-                        <li><a href="https://www.accenture.com/us-en">www.accenture.com</a></li>
-                        <li><a href="http://test.viewdemo.co/wp/digitank/">www.digitank.com</a></li>
-                        <li><a href="http://test.viewdemo.co/wp/iup/">www.iup.com</a></li>
-                        <li><a href="https://dragonboat.io/">https://dragonboat.io/</a></li>
-                        <li><a href="https://zinc.co/">https://zinc.co</a></li>
-                        <li><a href="http://dev.viewdemo.co/html/skil-tools/">www.skil-tools.com</a></li>
-                        <li><a href="http://dev.viewdemo.co/html/ego/">www.ego.com</a></li>
-                        <li><a href="http://dev.viewdemo.co/wp/chase/">www.chase.com</a></li>
+                        <li><a target="_blank" href="https://www.accenture.com/us-en">www.accenture.com</a></li>
+                        <li><a target="_blank" href="http://test.viewdemo.co/wp/digitank/">www.digitank.com</a></li>
+                        <li><a target="_blank" href="http://test.viewdemo.co/wp/iup/">www.iup.com</a></li>
+                        <li><a target="_blank" href="https://dragonboat.io/">https://dragonboat.io/</a></li>
+                        <li><a target="_blank" href="https://zinc.co/">https://zinc.co</a></li>
+                        <li><a target="_blank" href="http://dev.viewdemo.co/html/skil-tools/">www.skil-tools.com</a>
+                        </li>
+                        <li><a target="_blank" href="http://dev.viewdemo.co/html/ego/">www.ego.com</a></li>
+                        <li><a target="_blank" href="http://dev.viewdemo.co/wp/chase/">www.chase.com</a></li>
                     </ul>
                 </div>
                 <div class="content-desc">
@@ -90,8 +98,8 @@
                         <p>Freelance web developer</p>
                     </div>
                     <ul class="content-list">
-                        <li><a href="http://www.proditech.com.ua">www.proditech.com.ua</a></li>
-                        <li><a href="http://www.ecobot.com.ua">www.ecobot.com.ua</a></li>
+                        <li><a href="http://www.proditech.com.ua" target="_blank">www.proditech.com.ua</a></li>
+                        <li><a href="http://www.ecobot.com.ua" target="_blank">www.ecobot.com.ua</a></li>
                     </ul>
                 </div>
                 <div class="content-desc">
@@ -109,7 +117,7 @@
                 <div class="content-desc">
                     <div class="content-head">
                         <p class="content-date">09.2016 – 01.2017</p>
-                        <p>EPAM System,
+                        <p>EPAM Systems,
                             The Education program:
                             “Data Warehouse Business Intelligence”.
                         </p>
@@ -120,7 +128,7 @@
                 <h3 class="content-title">Education</h3>
                 <div class="content-desc">
                     <div class="content-head">
-                        <p class="content-date">2006 – 2012</p>
+                        <p class="content-date">2006 – 2011</p>
                         <p>Lviv Polytechnic National University,
                             Institute of Computer Technologies, Automation and Metrology, Specialist degree in Computer
                             System Engineering.</p>
@@ -131,8 +139,8 @@
                 <h3 class="content-title">Languages</h3>
                 <div class="content-desc lang">
                     <p>Ukrainian – native</p>
-                    <p>English   – intermediate</p>
-                    <p>Russian   - intermediate</p>
+                    <p>English – intermediate</p>
+                    <p>Russian - intermediate</p>
                 </div>
             </div>
             <div class="content-row">
