--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 
 <body>
     <div class="wrapper">
+        <div class="version">
+            Version <b>1.2.0</b>
+            <div class="tooltip">
+                <ul>
+                    <li><b>1.0.0</b> - create CV and added all work expirience</li>
+                    <li><b>1.1.0</b> - added styling</li>
+                    <li><b>1.1.1</b> - launched on github</li>
+                    <li><b>1.1.2</b> - added responive</li>
+                    <li><b>1.1.4</b> - added script</li>
+                    <li><b>1.1.5</b> - added version of CV</li>
+            </div>
+        </div>
         <div class="intro">
             <div class="intro-img">
                 <img src="cv-img.jpg" alt="img cv">
@@ -49,10 +61,10 @@
                     </div>
                 </div>
             </div>
-
-            <a href="#" id="js-to-bottom"></a>
         </div>
-
+        <div class="arrow-wrp">
+            <a href="#" id="js-to-bottom"><img src="./long-arrow-down.svg" alt="arrow-down"></a>
+        </div>
         <div class="content">
             <div class="content-row">
                 <h3 class="content-title">Professional Summary</h3>
@@ -72,6 +84,8 @@
                         <p>Chunkup, Web Development Lab, front-end dev.</p>
                     </div>
                     <ul class="content-list">
+                        <li><a href="https://qa.k12buy.com/landing/" target="_blank">https://qa.k12buy.com/landing/</a>
+                        </li>
                         <li><a href="https://qa.prorfx.com" target="_blank">https://qa.prorfx.com</a></li>
                     </ul>
                 </div>
