--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
             Version <b>1.2.0</b>
             <div class="tooltip">
                 <ul>
-                    <li><b>1.0.0</b> - create CV and added all work expirience</li>
+                    <li><b>1.0.0</b> - create CV and added all work experience</li>
                     <li><b>1.1.0</b> - added styling</li>
                     <li><b>1.1.1</b> - launched on github</li>
                     <li><b>1.1.2</b> - added responive</li>
                     <li><b>1.1.4</b> - added script</li>
                     <li><b>1.1.5</b> - added version of CV</li>
+                    <li><b>1.2.0</b> - fixed bugs in js and css</li>
             </div>
         </div>
         <div class="intro">
