--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Yurii Kitsera CV</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon/site.webmanifest">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body>
@@ -31,7 +31,7 @@
         </div>
         <div class="intro">
             <div class="intro-img">
-                <img src="cv-img.jpg" alt="img cv">
+                <img src="./assets/images/cv-img.jpg" alt="img cv">
             </div>
             <div class="wi100">
                 <h1 class="intro-headline">Yurii Kitsera</h1>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="arrow-wrp">
-            <a href="#" id="js-to-bottom"><img src="./long-arrow-down.svg" alt="arrow-down"></a>
+            <a href="#" id="js-to-bottom"><img src="./assets/images/long-arrow-down.svg" alt="arrow-down"></a>
         </div>
         <div class="content">
             <div class="content-row">
@@ -173,11 +173,11 @@
 
             <div class="btn-wrapper">
                 <a class="btn" href="javascript:void(0)" onClick="return rudr_favorite(this);">Add to favorites</a>
-                <a class="btn" href="Kitsera_Yurii_CV.pdf" download="Yurii-Kitsera-CV">Download CV</a>
+                <a class="btn" href="./assets/images/Kitsera_Yurii_CV.pdf" download="Yurii-Kitsera-CV">Download CV</a>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 
 </html>
