--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@
             </div>
 
             <div class="btn-wrapper">
-                <a class="btn" href="javascript:void(0)" onClick="return rudr_favorite(this);">Add to favorites</a>
+                <a class="btn" href="javascript:void(0)" id="js-favorite" >Add to favorites</a>
                 <a class="btn" href="./assets/images/Kitsera_Yurii_CV.pdf" download="Yurii-Kitsera-CV">Download CV</a>
             </div>
         </div>
