--- a/src/index.html
+++ b/src/index.html
@@ -16,19 +16,6 @@
 
 <body>
     <div class="wrapper">
-        <div class="version">
-            Version <b>1.2.0</b>
-            <div class="tooltip">
-                <ul>
-                    <li><b>1.0.0</b> - create CV and added all work experience</li>
-                    <li><b>1.1.0</b> - added styling</li>
-                    <li><b>1.1.1</b> - launched on github</li>
-                    <li><b>1.1.2</b> - added responive</li>
-                    <li><b>1.1.4</b> - added script</li>
-                    <li><b>1.1.5</b> - added version of CV</li>
-                    <li><b>1.2.0</b> - fixed bugs in js and css</li>
-            </div>
-        </div>
         <div class="intro">
             <div class="intro-img">
                 <img src="./assets/images/cv-img.jpg" alt="img cv">
@@ -64,13 +51,13 @@
             </div>
         </div>
         <div class="arrow-wrp">
-            <a href="#" id="js-to-bottom"><img src="./assets/images/long-arrow-down.svg" alt="arrow-down"></a>
+            <!-- <a href="#" id="js-to-bottom"><img src="./assets/images/long-arrow-down.svg" alt="arrow-down"></a> -->
         </div>
         <div class="content">
             <div class="content-row">
                 <h3 class="content-title">Professional Summary</h3>
                 <div class="content-desc">
-                    <p>1.5+ year experience as a Front-End dev. I am interested in Angular 2+ and I'm using it in my pet
+                    <p>1.5+ year experience as a Front-End dev. I am interested in React and I'm using it in my pet
                         project. </p>
                     <p>Looking for a job that will help me improve my skills. Responsible, diligent, reliable, able to
                         listen, friendly, able to learn quickly and team player.
@@ -85,8 +72,8 @@
                         <p>Chunkup, Web Development Lab, front-end dev.</p>
                     </div>
                     <ul class="content-list">
-                        <li><a href="https://qa.k12buy.com/landing/" target="_blank">https://qa.k12buy.com/landing/</a>
-                        </li>
+                        <li>Commercial Client product (library/plugin)</li>
+                        <li><a href="https://qa.k12buy.com/landing/" target="_blank">https://qa.k12buy.com/landing/</a></li>
                         <li><a href="https://qa.prorfx.com" target="_blank">https://qa.prorfx.com</a></li>
                     </ul>
                 </div>
@@ -165,16 +152,17 @@
                         <li>HTML5, PUG, Nunjucks</li>
                         <li>CSS3, SCSS, SASS, LESS</li>
                         <li>JS, ES6, TS, jQuery</li>
+                        <li>React JS basic</li>
                         <li>Gulp, Webpack, Git</li>
-                        <li>Phtoshop, Zeplin, Sketch</li>
+                        <li>Photoshop, Zeplin, Sketch</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="btn-wrapper">
+            <!-- <div class="btn-wrapper">
                 <a class="btn" href="javascript:void(0)" id="js-favorite" >Add to favorites</a>
                 <a class="btn" href="./assets/images/Kitsera_Yurii_CV.pdf" download="Yurii-Kitsera-CV">Download CV</a>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- <script src="script.js"></script> -->
