--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="arrow-wrp">
-            <!-- <a href="#" id="js-to-bottom"><img src="./assets/images/long-arrow-down.svg" alt="arrow-down"></a> -->
+            <a href="#" id="js-to-bottom"><img src="./assets/images/long-arrow-down.svg" alt="arrow-down"></a>
         </div>
         <div class="content">
             <div class="content-row">
@@ -159,10 +159,10 @@
                 </div>
             </div>
 
-            <!-- <div class="btn-wrapper">
+            <div class="btn-wrapper">
                 <a class="btn" href="javascript:void(0)" id="js-favorite" >Add to favorites</a>
                 <a class="btn" href="./assets/images/Kitsera_Yurii_CV.pdf" download="Yurii-Kitsera-CV">Download CV</a>
-            </div> -->
+            </div>
         </div>
     </div>
     <!-- <script src="script.js"></script> -->
