--- a/src/index.html
+++ b/src/index.html
@@ -54,12 +54,14 @@
             <a href="#" id="js-to-bottom"><img src="./assets/images/long-arrow-down.svg" alt="arrow-down"></a>
         </div>
         <div class="content">
+            <div class="btn-wrapper btn-wrapper-top">
+                <a class="btn" href="javascript:void(0)" id="js-favorite" >Add to favorites</a>
+                <a class="btn" href="./assets/images/Kitsera_Yurii_CV.pdf" download="Yurii-Kitsera-CV">Download CV</a>
+            </div>
             <div class="content-row">
                 <h3 class="content-title">Professional Summary</h3>
                 <div class="content-desc">
-                    <p>1.5+ year experience as a Front-End dev. I am interested in React and I'm using it in my pet
-                        project. </p>
-                    <p>Looking for a job that will help me improve my skills. Responsible, diligent, reliable, able to
+                    <p>2.5+ year experience as a Front-End dev. I am interested in React and I'm looking for a job that will help me improve my skills. Responsible, diligent, reliable, able to
                         listen, friendly, able to learn quickly and team player.
                     </p>
                 </div>
@@ -68,8 +70,27 @@
                 <h3 class="content-title">Work Experience</h3>
                 <div class="content-desc">
                     <div class="content-head work">
-                        <p class="content-date">04.2019 - now</p>
+                        <p class="content-date">11.2019 - now</p>
+                        <p>Sebale, React developer</p>
+                    </div>
+                    <div class="content-info">
+                        <p>I'm working with augmented reality platform, where I am creating and implementation of functionality for this project. Also I served as front-end team lead and organize tasks. Working with React hooks, React SSR, React Routing, RestAPI and other web technologies;</p>
+                    </div>
+                    <ul class="content-list">
+                        <li><a href="https://talim.io/" target="_blank">talim.io</a></li>
+                        <li><a href="https://app.talim.io"target="_blank">app.talim.io</a></li>
+                        <li><a href="https://www.sunspire.com/" target="_blank">sunspire.com</a></li>
+                        <li><a href="https://zakhidne-minjust.gov.ua/" target="_blank">zakhidne-minjust.gov.ua</a></li>
+                    </ul>
+                </div>
+                <div class="content-desc">
+                    <div class="content-head work">
+                        <p class="content-date">04.2019 - 11.2019</p>
                         <p>Chunkup, Web Development Lab, front-end dev.</p>
+                    </div>
+                    <div class="content-info">
+                        <p>During this period I worked on the frontend part in American tender projects. Worked with c# templates, angular components, javascript, css3 & html5, completely rewrote the project for responses, and also added support for Internet Explorer. Technology stack: sass, js, es6, c#, html5, css3, BrowserStack, bitbucket.</p>
+                        <p>Also, created a js library/plugin for the e-commerce platform, which creates your own label that is placed on any product in the store. Technology stack: sass, js, es6, typescript, RestAPI, swagger, canvas, html5, css3, BrowserStack, bitbucket, zeplin.</p>
                     </div>
                     <ul class="content-list">
                         <li>Commercial Client product (library/plugin)</li>
@@ -81,6 +102,10 @@
                     <div class="content-head work">
                         <p class="content-date">01.2018 - 04.2019</p>
                         <p>UPQODE LLC, front-end dev.</p>
+                    </div>
+                    <div class="content-info">
+                        <p>During this period, I worked on WordPress as frontend dev, creating templates that were sold at https://themeforest.net and comercial sites. Responsive, Cross-browser compatibility, W3C markup validation, HTML5, CSS3, Nunjucks, SASS, LESS, jQuery, pure javascript, php, wordpress.</p>
+                        <p></p>
                     </div>
                     <ul class="content-list">
                         <li><a target="_blank" href="https://www.accenture.com/us-en">www.accenture.com</a></li>
@@ -149,12 +174,12 @@
                 <h3 class="content-title">Technical skills</h3>
                 <div class="content-desc tech">
                     <ul>
+                        <li>React hooks, React SSR, React Router</li>
+                        <li>JS, ES6, TS, RestAPI</li>
                         <li>HTML5, PUG, Nunjucks</li>
                         <li>CSS3, SCSS, SASS, LESS</li>
-                        <li>JS, ES6, TS, jQuery</li>
-                        <li>React JS basic</li>
-                        <li>Gulp, Webpack, Git</li>
-                        <li>Photoshop, Zeplin, Sketch</li>
+                        <li>Gulp, Webpack, Git, Bitbucket</li>
+                        <li>Photoshop, Zeplin, Sketch, Postman</li>
                     </ul>
                 </div>
             </div>
