--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                         <p>Sebale, React developer</p>
                     </div>
                     <div class="content-info">
-                        <p>I'm working with augmented reality platform, where I am creating and implementation of functionality for this project. Also I served as front-end team lead and organize tasks. Working with React hooks, React SSR, React Routing, RestAPI and other web technologies;</p>
+                        <p>I was working with augmented reality platform, where I was creating and implementing the functionality for this project. Also I served as front-end team lead and organized tasks for others. I had experience with React hooks, React SSR, React Routing, RestAPI and other web technologies. My projects are the following:</p>
                     </div>
                     <ul class="content-list">
                         <li><a href="https://talim.io/" target="_blank">talim.io</a></li>
@@ -141,6 +141,18 @@
             </div>
             <div class="content-row">
                 <h3 class="content-title">Additional Education</h3>
+                <div class="content-desc">
+                    <div class="content-head">
+                        <p class="content-date">12.2019</p>
+                        <p>React - The Complete Guide (incl Hooks, React Router, Redux)</p>
+                    </div>
+                </div>
+                <div class="content-desc">
+                    <div class="content-head">
+                        <p class="content-date">09.2019</p>
+                        <p>Typescript: The Complete Developer's Guide</p>
+                    </div>
+                </div>
                 <div class="content-desc">
                     <div class="content-head">
                         <p class="content-date">09.2016 – 01.2017</p>
